Version 1.01
* Preview of a comment is "spiced" now, too.
* Preview comment is not loosing article promotion selection anymore.
* The article selector was not hiding again on invalid URLs (only clearing options).
* The internal styling of the article selector is optional now.
* Removed spice from admins comment editor.
* Added some css / templating fixes proposed by @yellowled. Thanks!
* 2k11 commentform.tpl patchfile changed. Please update if you use it! 